# Copyright (C) 2005,2006,2007 MaNGOS <http://www.mangosproject.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

# SQL files for MaNGOS database to be installed to datadir
pkgdata_DATA = \
	mangos.sql \
	realmd.sql

## Additional files to include when running 'make dist'
#  SQL files for MaNGOS database
EXTRA_DIST = \
	create_mysql.sql \
	drop_mysql.sql \
	mangos.sql \
	realmd.sql \

#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST += \
	updates/1150_character_aura.sql \
	updates/1155_commands.sql \
	updates/1155_npc_option.sql \
	updates/1158_character_inventory.sql \
	updates/1186_game_weather.sql \
	updates/1208_npc_trainer.sql \
	updates/1250_item_template.sql \
	updates/1262_areatrigger_tavern.sql \
	updates/1262_game_graveyard.sql \
	updates/1282_playercreateinfo_item.sql \
	updates/1282_playercreateinfo.sql \
	updates/1292_loot_template.sql \
	updates/1332_character_queststatus.sql \
	updates/1336_item_template.sql \
	updates/1339_areatrigger_city.sql \
	updates/1349_areatrigger_involvedrelation.sql \
	updates/1349_character_aura.sql \
	updates/1349_character_inventory.sql \
	updates/1349_creature_template.sql \
	updates/1349_gameobject_template.sql \
	updates/1356_item_template.sql \
	updates/1411_item_template.sql \
	updates/1447_quest_template.sql \
	updates/1465_build_realmd_db.sql \
	updates/1465_create_realmd_db.sql \
	updates/1465_populate_realmd_db.sql \
	updates/1475_character_aura.sql \
	updates/1511_object_involvedrelation.sql \
	updates/1511_object_questrelation.sql \
	updates/1526_npc_vendor.sql \
	updates/1562_creature_template.sql \
	updates/1576_command.sql \
	updates/1595_area_graveyard.sql \
	updates/1601_game_addons.sql \
	updates/1615_areatrigger_graveyard.sql \
	updates/1635_character.sql \
	updates/1669_character_spell.sql \
	updates/1676_game_graveyard.sql \
	updates/1676_game_tele.sql \
	updates/1687_loot_template.sql \
	updates/1704_item_template.sql \
	updates/1799_quest_template.sql \
	updates/1825_game_corpse.sql \
	updates/1856_command.sql \
	updates/1865_command.sql \
	updates/1880_command.sql \
	updates/1883_quest_template.sql \
	updates/1915_loot_template.sql \
	updates/1935_command.sql \
	updates/1949_corpse.sql \
	updates/1953_playercreateinfo_skill.sql \
	updates/1953_playercreateinfo_spell.sql \
	updates/1956_command.sql \
	updates/2017_quest_template.sql \
	updates/2033_command.sql \
	updates/2041_auctionhouse_bid.sql \
	updates/2041_game_spell.sql \
	updates/2041_game_talent.sql \
	updates/2047_quest_template.sql \
	updates/2054_command.sql \
	updates/2058_command.sql \
	updates/2066_creature_template.sql \
	updates/2069_quest_template.sql \
	updates/2079_command.sql \
	updates/2099_npc_trainer.sql \
	updates/2107_command.sql \
	updates/2113_command.sql \
	updates/2118_playercreateinfo_spell.sql \
	updates/2119_command.sql \
	updates/2130_quest_template.sql \
	updates/2131_command.sql \
	updates/2156_character.sql \
	updates/2164_command.sql \
	updates/2191_npc_trainer.sql \
	updates/2191_playercreateinfo.sql \
	updates/2220_command.sql \
	updates/2297_character_stable.sql \
	updates/2302_player_levelupgains.sql \
	updates/2308_character_pet.sql \
	updates/2330_realmlist.sql \
	updates/2343_areatrigger_template.sql \
	updates/2352_quest_template.sql \
	updates/2357_playercreateinfo_action.sql \
	updates/2359_command.sql \
	updates/2360_creature_template.sql \
	updates/2362_areatrigger_template.sql \
	updates/2367_command.sql \
	updates/2369_creature_template.sql \
	updates/2370_character_queststatus.sql \
	updates/2372_creature_template.sql \
	updates/2382_mail_item.sql \
	updates/2383_auctionhouse_item.sql \
	updates/2418_quest_template.sql \
	updates/2421_quest_template.sql \
	updates/2424_gameobject_template.sql \
	updates/2429_taxi.sql \
	updates/2445_command.sql \
	updates/2448_command.sql \
	updates/2448_game_graveyard.sql \
	updates/2454_command.sql \
	updates/2467_quest_template.sql \
	updates/2468_command.sql \
	updates/2469_skinning_loot_template.sql \
	updates/2479_loot_template.sql \
	updates/2494_command.sql \
	updates/2495_item_loot_template.sql \
	updates/2500_command.sql \
	updates/2513_guild_rank.sql \
	updates/2516_auctionhouse.sql \
	updates/2517_guild_charters.sql \
	updates/2518_guild.sql \
	updates/2530_loot_template.sql \
	updates/2549_character.sql \
	updates/2571_quest_template.sql \
	updates/2572_creature_template.sql \
	updates/2578_character.sql \
	updates/2580_character.sql \
	updates/2580_insatne.sql \
	updates/2584_character.sql \
	updates/2584_instance.sql \
	updates/2597_playercreateinfo_action.sql \
	updates/2597_playercreateinfo_item.sql \
	updates/2597_playercreateinfo_reputation.sql \
	updates/2597_playercreateinfo_skill.sql \
	updates/2597_playercreateinfo_spell.sql \
	updates/2598_playercreateinfo.sql \
	updates/2605_realmd_account.sql \
	updates/2610_character.sql \
	updates/2617_character_spell_cooldown.sql \
	updates/2622_character.sql \
	updates/2622_gameobject.sql \
	updates/2622_transports.sql \
	updates/2630_command.sql \
	updates/2633_character_spell_cooldown.sql \
	updates/2637_auctionhouse.sql \
	updates/2637_mail.sql \
	updates/2641_command.sql \
	updates/2642_loot_template.sql \
	updates/2649_command.sql \
	updates/2660_command.sql \
	updates/2663_command.sql \
	updates/2670_command.sql \
	updates/2674_quest_template.sql \
	updates/2674_scripts.sql \
	updates/2680_game_addons.sql \
	updates/2684_gameobject.sql \
	updates/2684_quest_template.sql \
	updates/2688_command.sql \
	updates/2688_playercreateinfo.sql \
	updates/2688_player_levelstats.sql \
	updates/2689_player_levelstats.sql \
	updates/2691_player_levelupgains.sql \
	updates/2699_character_inventory.sql \
	updates/2703_command.sql \
	updates/2713_quest_template.sql \
	updates/2746_command.sql \
	updates/2746_creature.sql \
	updates/2754_realmd.sql \
	updates/2762_command.sql \
	updates/2765_auctionHouse.sql \
	updates/2765_mail.sql \
	updates/2778_command.sql \
	updates/2787_item_instance.sql \
	updates/2798_command.sql \
	updates/2803_command.sql \
	updates/2808_command.sql \
	updates/2812_character_pet.sql \
	updates/2812_pet_name_generation.sql \
	updates/2815_character_pet.sql \
	updates/2821_raidgroups.sql \
	updates/2828_character.sql \
	updates/2838_corpse_grid.sql \
	updates/2838_creature_grid.sql \
	updates/2838_gameobject_grid.sql \
	updates/2842_character_pet.sql \
	updates/2843_character_pet.sql \
	updates/2850_command.sql \
	updates/2869_command.sql \
	updates/2875_npc_trainer.sql \
	updates/2875_spell_chain.sql \
	updates/2881_spell_chain.sql \
	updates/2885_character.sql \
	updates/2912_areatrigger_template.sql \
	updates/2916_character.sql \
	updates/2938_spell_scripts.sql \
	updates/2940_playercreateinfo_skill.sql \
	updates/2958_command.sql \
	updates/2958_scripts.sql \
	updates/2958_spell_scripts.sql \
	updates/2982_command.sql \
	updates/2993_command.sql \
	updates/3005.sql \
	updates/3010_item_template.sql \
	updates/3017_auctionhouse.sql \
	updates/3020_command.sql \
	updates/3032_creature.sql \
	updates/3044_gameobject_template.sql \
	updates/3054_command.sql \
	updates/3059_pet_levelstats.sql \
	updates/3068_command.sql \
	updates/3075_creature.sql \
	updates/3075_gameobject.sql \
	updates/3090_command.sql \
	updates/3090_creature_template.sql \
	updates/3090_loot_template.sql \
	updates/3091_spell_proc_event.sql \
	updates/3092_quest_template.sql \
	updates/3096_spell_proc_event.sql \
	updates/3106_command.sql \
	updates/3107_playercreateinfo_skill.sql \
	updates/3108_quest_template.sql \
	updates/3110_quest_template.sql \
	updates/3115_quest_template.sql \
	updates/3138_character_inventory.sql \
	updates/3138_disenchaning_loot_template.sql \
	updates/3138_item_template.sql \
	updates/3141_spell_threat.sql \
	updates/3144_command.sql \
	updates/3150_command.sql \
	updates/3162_character_queststatus.sql \
	updates/3162_command.sql \
	updates/3162_quest_template.sql \
	updates/3174_command.sql \
	updates/3179_quest_template.sql \
	updates/3180_spell_proc_event.sql \
	updates/3183_command.sql \
	updates/3186_command.sql \
	updates/3202_character_gifts.sql \
	updates/3205_character_inventory.sql \
	updates/3231_quest_template.sql \
	updates/3245_item_text.sql \
	updates/3245_mail.sql \
	updates/3245_page_text.sql \
	updates/3246_character_reputation.sql \
	updates/3251_commands.sql \
	updates/3252.sql \
	updates/README
