# Copyright (C) 2005-2008 MaNGOS <http://www.mangosproject.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Additional files to include when running 'make dist'
#  Debug libraries for Win32 builds.
EXTRA_DIST = \
	debug/libeay32.dll \
	debug/libeay32.lib \
	debug/libmySQL.dll \
	debug/libmySQL.lib \
	debug/sqlite.lib

# Release libraries for Win32 builds.
EXTRA_DIST += \
	release/libeay32.dll \
	release/libeay32.lib \
	release/libmySQL.dll \
	release/libmySQL.lib \
	release/sqlite.lib
