# Copyright (C) 2005,2006,2007 MaNGOS <http://www.mangosproject.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	1150_character_aura.sql \
	1155_commands.sql \
	1155_npc_option.sql \
	1158_character_inventory.sql \
	1186_game_weather.sql \
	1208_npc_trainer.sql \
	1250_item_template.sql \
	1262_areatrigger_tavern.sql \
	1262_game_graveyard.sql \
	1282_playercreateinfo_item.sql \
	1282_playercreateinfo.sql \
	1292_loot_template.sql \
	1332_character_queststatus.sql \
	1336_item_template.sql \
	1339_areatrigger_city.sql \
	1349_areatrigger_involvedrelation.sql \
	1349_character_aura.sql \
	1349_character_inventory.sql \
	1349_creature_template.sql \
	1349_gameobject_template.sql \
	1356_item_template.sql \
	1411_item_template.sql \
	1447_quest_template.sql \
	1465_build_realmd_db.sql \
	1465_create_realmd_db.sql \
	1465_populate_realmd_db.sql \
	1475_character_aura.sql \
	1511_object_involvedrelation.sql \
	1511_object_questrelation.sql \
	1526_npc_vendor.sql \
	1562_creature_template.sql \
	1576_command.sql \
	1595_area_graveyard.sql \
	1601_game_addons.sql \
	1615_areatrigger_graveyard.sql \
	1635_character.sql \
	1669_character_spell.sql \
	1676_game_graveyard.sql \
	1676_game_tele.sql \
	1687_loot_template.sql \
	1704_item_template.sql \
	1799_quest_template.sql \
	1825_game_corpse.sql \
	1856_command.sql \
	1865_command.sql \
	1880_command.sql \
	1883_quest_template.sql \
	1915_loot_template.sql \
	1935_command.sql \
	1949_corpse.sql \
	1953_playercreateinfo_skill.sql \
	1953_playercreateinfo_spell.sql \
	1956_command.sql \
	2017_quest_template.sql \
	2033_command.sql \
	2041_auctionhouse_bid.sql \
	2041_game_spell.sql \
	2041_game_talent.sql \
	2047_quest_template.sql \
	2054_command.sql \
	2058_command.sql \
	2066_creature_template.sql \
	2069_quest_template.sql \
	2079_command.sql \
	2099_npc_trainer.sql \
	2107_command.sql \
	2113_command.sql \
	2118_playercreateinfo_spell.sql \
	2119_command.sql \
	2130_quest_template.sql \
	2131_command.sql \
	2156_character.sql \
	2164_command.sql \
	2191_npc_trainer.sql \
	2191_playercreateinfo.sql \
	2220_command.sql \
	2297_character_stable.sql \
	2302_player_levelupgains.sql \
	2308_character_pet.sql \
	2330_realmlist.sql \
	2343_areatrigger_template.sql \
	2352_quest_template.sql \
	2357_playercreateinfo_action.sql \
	2359_command.sql \
	2360_creature_template.sql \
	2362_areatrigger_template.sql \
	2367_command.sql \
	2369_creature_template.sql \
	2370_character_queststatus.sql \
	2372_creature_template.sql \
	2382_mail_item.sql \
	2383_auctionhouse_item.sql \
	2418_quest_template.sql \
	2421_quest_template.sql \
	2424_gameobject_template.sql \
	2429_taxi.sql \
	2445_command.sql \
	2448_command.sql \
	2448_game_graveyard.sql \
	2454_command.sql \
	2467_quest_template.sql \
	2468_command.sql \
	2469_skinning_loot_template.sql \
	2479_loot_template.sql \
	2494_command.sql \
	2495_item_loot_template.sql \
	2500_command.sql \
	2513_guild_rank.sql \
	2516_auctionhouse.sql \
	2517_guild_charters.sql \
	2518_guild.sql \
	2530_loot_template.sql \
	2549_character.sql \
	2571_quest_template.sql \
	2572_creature_template.sql \
	2578_character.sql \
	2580_character.sql \
	2580_insatne.sql \
	2584_character.sql \
	2584_instance.sql \
	2597_playercreateinfo_action.sql \
	2597_playercreateinfo_item.sql \
	2597_playercreateinfo_reputation.sql \
	2597_playercreateinfo_skill.sql \
	2597_playercreateinfo_spell.sql \
	2598_playercreateinfo.sql \
	2605_realmd_account.sql \
	2610_character.sql \
	2617_character_spell_cooldown.sql \
	2622_character.sql \
	2622_gameobject.sql \
	2622_transports.sql \
	2630_command.sql \
	2633_character_spell_cooldown.sql \
	2637_auctionhouse.sql \
	2637_mail.sql \
	2641_command.sql \
	2642_loot_template.sql \
	2649_command.sql \
	2660_command.sql \
	2663_command.sql \
	2670_command.sql \
	2674_quest_template.sql \
	2674_scripts.sql \
	2680_game_addons.sql \
	2684_gameobject.sql \
	2684_quest_template.sql \
	2688_command.sql \
	2688_playercreateinfo.sql \
	2688_player_levelstats.sql \
	2689_player_levelstats.sql \
	2691_player_levelupgains.sql \
	2699_character_inventory.sql \
	2703_command.sql \
	2713_quest_template.sql \
	2746_command.sql \
	2746_creature.sql \
	2754_realmd.sql \
	2762_command.sql \
	2765_auctionHouse.sql \
	2765_mail.sql \
	2778_command.sql \
	2787_item_instance.sql \
	2798_command.sql \
	2803_command.sql \
	2808_command.sql \
	2812_character_pet.sql \
	2812_pet_name_generation.sql \
	2815_character_pet.sql \
	2821_raidgroups.sql \
	2828_character.sql \
	2838_corpse_grid.sql \
	2838_creature_grid.sql \
	2838_gameobject_grid.sql \
	2842_character_pet.sql \
	2843_character_pet.sql \
	2850_command.sql \
	2869_command.sql \
	2875_npc_trainer.sql \
	2875_spell_chain.sql \
	2881_spell_chain.sql \
	2885_character.sql \
	2912_areatrigger_template.sql \
	2916_character.sql \
	2938_spell_scripts.sql \
	2940_playercreateinfo_skill.sql \
	2958_command.sql \
	2958_scripts.sql \
	2958_spell_scripts.sql \
	2982_command.sql \
	2993_command.sql \
	3005.sql \
	3010_item_template.sql \
	3017_auctionhouse.sql \
	3020_command.sql \
	3032_creature.sql \
	3044_gameobject_template.sql \
	3054_command.sql \
	3059_pet_levelstats.sql \
	3068_command.sql \
	3075_creature.sql \
	3075_gameobject.sql \
	3090_command.sql \
	3090_creature_template.sql \
	3090_loot_template.sql \
	3091_spell_proc_event.sql \
	3092_quest_template.sql \
	3096_spell_proc_event.sql \
	3106_command.sql \
	3107_playercreateinfo_skill.sql \
	3108_quest_template.sql \
	3110_quest_template.sql \
	3115_quest_template.sql \
	3138_character_inventory.sql \
	3138_disenchaning_loot_template.sql \
	3138_item_template.sql \
	3141_spell_threat.sql \
	3144_command.sql \
	3150_command.sql \
	3162_character_queststatus.sql \
	3162_command.sql \
	3162_quest_template.sql \
	3174_command.sql \
	3179_quest_template.sql \
	3180_spell_proc_event.sql \
	3183_command.sql \
	3186_command.sql \
	3202_character_gifts.sql \
	3205_character_inventory.sql \
	3231_quest_template.sql \
	3245_item_text.sql \
	3245_mail.sql \
	3245_page_text.sql \
	3246_character_reputation.sql \
	3251_commands.sql \
	3252.sql \
	3296_commands.sql \
	3296_playercreateinfo_skill.sql \
	3296_spell_learn_skill.sql \
	3310_spell_learn_spell.sql \
	3316_playercreateinfo_reputation.sql \
	3323.sql \
	3344_playercreateinfo_spell.sql \
	3346_command.sql \
	3348_playercreateinfo_spell.sql \
	3350_command.sql \
	3351_character_pet.sql \
	3397_creature_template.sql \
	3400.sql \
	3402_creature_onkill_reputation.sql \
	3410_group.sql \
	3424_command.sql \
	3463_mangos.sql \
	3463_realm.sql \
	3474_creature_addon.sql \
	3501.sql \
	3503_creature_movement.sql \
	3512_character_spell_cooldown.sql \
	3514_mail.sql \
	3516_spell_learn_spell.sql \
	3533_command.sql \
	3538_guild_charter_sign.sql \
	3539_item_template.sql \
	3545_creature_movement.sql \
	3547_character_reputation.sql \
	3553_creature_onkill_reputation.sql \
	3562_player_levelstats.sql \
	3605_creature_addon.sql \
	3605_grid.sql \
	3611_spell_learn_skill.sql \
	3616_commands.sql \
	3627_quest_template.sql \
	3631_gameobject_template.sql \
	3636_character_spell.sql \
	3636_playercreateinfo_spell.sql \
	3646_spell_chain.sql \
	3648_command.sql \
	3649_spell_chain.sql \
	3653_spell.sql \
	3655_quest_template.sql \
	3657_command.sql \
	3660_character_kill.sql \
	3700_character.sql \
	3728_spell_proc_event.sql \
	3730_command.sql \
	3732_spell_affect.sql \
	3739_looking_for_group.sql \
	3746_spell_proc_event.sql \
	3747_command.sql \
	3748_command.sql \
	3753_battleground_template.sql \
	3763_spell_affect.sql \
	3766_spell_proc_event.sql \
	3771_creature_template.sql \
	3773.sql \
	3774_playercreateinfo_spell.sql \
	3782_command.sql \
	3784_command.sql \
	3787_spell_proc_event.sql \
	3801_banAccount.sql \
	3801_command.sql \
	3802_arena_teams.sql \
	3802_petitions.sql \
	3805_spell_proc_event.sql \
	3806_petitions.sql \
	3833_quest_template.sql \
	3845_account.sql \
	3845_command.sql \
	3859_spell_affect.sql \
	3860_creature_template.sql \
	3862_prospecting_loot_template.sql \
	3874_spell_scripts.sql \
	3875_item_template.sql \
	3876_character_ticket.sql \
	3884_quest_scripts.sql \
	3891_quest_scripts.sql \
	3906_areatrigger_template.sql \
	3929_spell_affect.sql \
	3932_item_enchantment_template.sql \
	3932_item_template.sql \
	3939_realmd_account.sql \
	3948_realmd_account.sql \
	3951_exploration_basexp.sql \
	3961_uptime.sql \
	3964_command.sql \
	4010_spell_proc_event.sql \
	4012_spell_proc_event.sql \
	4018_spell_proc_event.sql \
	4019_spell_chain.sql \
	4019_spell_proc_event.sql \
	4020_spell_chain.sql \
	4020_spell_proc_event.sql \
	4021_spell_chain.sql \
	4021_spell_proc_event.sql \
	4023_spell_proc_event.sql \
	4026_spell_proc_event.sql \
	4028_spell_chain.sql \
	4028_spell_proc_event.sql \
	4031_spell_chain.sql \
	4031_spell_proc_event.sql \
	4035_spell_proc_event.sql \
	4036_spell_proc_event.sql \
	4037_spell_proc_event.sql \
	4058.sql \
	4059_spell_learn_skill.sql \
	4059_spell_learn_spell.sql \
	4076_character_spell.sql \
	4076_playercreateinfo_spell.sql \
	4081_command.sql \
	4096_pet.sql \
	4116_creature_template.sql \
	4133_command.sql \
	4133_spell_chain.sql \
	4134_command.sql \
	4139_spell_proc_event.sql \
	4140_command.sql \
	4145_character_reputation.sql \
	4154_spell_proc_event.sql \
	4176_character.sql \
	4176_command.sql \
	4187_command.sql \
	4204_command.sql \
	4205_creature_template.sql \
	4224_character_aura.sql \
	4224_pet_aura.sql \
	4235_spell_proc_event.sql \
	4239_spell_chain.sql \
	4239_spell_proc_event.sql \
	4242_spell_proc_event.sql \
	4243_spell_affect.sql \
	4248_spell_chain.sql \
	4248_spell_proc_event.sql \
	4252_spell_threat.sql \
	4255_spell_chain.sql \
	4258_command.sql \
	4259_spell_chain.sql \
	4259_spell_proc_event.sql \
	4262_spell_proc_event.sql \
	4266_spell_proc_event.sql \
	4267_command.sql \
	4270_spell_proc_event.sql \
	4272_spell_proc_event.sql \
	4274_character_pet.sql \
	4275_game_event.sql \
	4288_spell_proc_event.sql \
	4294_spell_proc_event.sql \
	4296_spell_proc_event.sql \
	4317_spell_affect.sql \
	4320_spell_affect.sql \
	4331_spell_chain.sql \
	4331_spell_proc_event.sql \
	4341_game_event.sql \
	4356_command.sql \
	4369_battleground_template.sql \
	4376_battleground_template.sql \
	4392_battleground_template.sql \
	4395_spell_chain.sql \
	4397_command.sql \
	4401_spell_chain.sql \
	4403_reserved_name.sql \
	4407_character_kill.sql \
	4407_character.sql \
	4407_command.sql \
	4414_spell_chain.sql \
	4414_spell_proc_event.sql \
	4417_quest_template.sql \
	4420_spell_proc_event.sql \
	4422_command.sql \
	4425_character.sql \
	4425_command.sql \
	4426_creature_template.sql \
	4430_spell_proc_event.sql \
	4432_item_template.sql \
	4432_spell_chain.sql \
	4432_spell_proc_event.sql \
	4434_spell_proc_event.sql \
	4437_character_aura.sql \
	4437_pet_aura.sql \
	4439_spell_proc_event.sql \
	4446_creature_template.sql \
	4464_instance.sql \
	4464_instance_template.sql \
	4470_command.sql \
	4480_spell_affect.sql \
	4481_spell_affect.sql \
	4482_playercreateinfo.sql \
	4482_spell_proc_event.sql \
	4488_db_version.sql \
	4491_spell_affect.sql \
	4496_spell_script_target.sql \
	4498_spell_proc_event.sql \
	4499_spell_script_target.sql \
	4501.sql \
	4503_spell_chain.sql \
	4503_spell_proc_event.sql \
	4504_spell_affect.sql \
	4504_spell_proc_event.sql \
	4506_spell_learn_spell.sql \
	4507_quest_template.sql \
	4510_spell_proc_event.sql \
	4513_spell_proc_event.sql \
	4517_spell_affect.sql \
	4524_spell_proc_event.sql \
	4537_player_levelstats.sql \
	4540_battleground_template.sql \
	4544_creature_addon.sql \
	4544_creature_template_addon.sql \
	4547_spell_affect.sql \
	4547_spell_proc_event.sql \
	4551_item_template.sql \
	4556_realmlist.sql \
	4561_command.sql \
	4571_button_scripts.sql \
	4577_gameobject.sql \
	4579.sql \
	4582_spell_affect.sql \
	4584_character_inventory.sql \
	4585_item_instance.sql \
	4587_character_quest_daily.sql \
	4588_command.sql \
	4592_command.sql \
	4592_realmlist.sql \
	4594_item_template.sql \
	4595_command.sql \
	4595_spell_affect.sql \
	4597_realmlist.sql \
	4599_command.sql \
	4603_spell_affect.sql \
	4605_creature_addon.sql \
	4605_creature_template_addon.sql \
	4608_game_graveyard_zone.sql \
	4615_creature_template.sql \
	4627_game_event_model_equip.sql \
	4628.sql \
	4632_areatrigger_teleport.sql \
	4633_spell_teleport.sql \
	4640_command.sql \
	4656_game_event_creature_quest.sql \
	4657_quest_template.sql \
	4664.sql \
	4667_characters_character.sql \
	4674_mangos_skill_discovery_template.sql \
	4679_mangos_spell_proc_event.sql \
	4687_mangos_loot_template.sql \
	4695_mangos_loot_template.sql \
	4704_mangos_battlemaster_entry.sql \
	4714_mangos_spell_threat.sql \
	4718_mangos_uptime.sql \
	4737_mangos_command.sql \
	4764_characters_auctionhouse.sql \
	4772_mangos_item_template.sql \
	4781_mangos_gameobject_loot_template.sql \
	4788_mangos_gameobject_template.sql \
	4793_mangos_spell_affect.sql \
	4799_mangos_creature_addon.sql \
	4815_mangos_quest_template.sql \
	4829_mangos_command.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	1150_character_aura.sql \
	1155_commands.sql \
	1155_npc_option.sql \
	1158_character_inventory.sql \
	1186_game_weather.sql \
	1208_npc_trainer.sql \
	1250_item_template.sql \
	1262_areatrigger_tavern.sql \
	1262_game_graveyard.sql \
	1282_playercreateinfo_item.sql \
	1282_playercreateinfo.sql \
	1292_loot_template.sql \
	1332_character_queststatus.sql \
	1336_item_template.sql \
	1339_areatrigger_city.sql \
	1349_areatrigger_involvedrelation.sql \
	1349_character_aura.sql \
	1349_character_inventory.sql \
	1349_creature_template.sql \
	1349_gameobject_template.sql \
	1356_item_template.sql \
	1411_item_template.sql \
	1447_quest_template.sql \
	1465_build_realmd_db.sql \
	1465_create_realmd_db.sql \
	1465_populate_realmd_db.sql \
	1475_character_aura.sql \
	1511_object_involvedrelation.sql \
	1511_object_questrelation.sql \
	1526_npc_vendor.sql \
	1562_creature_template.sql \
	1576_command.sql \
	1595_area_graveyard.sql \
	1601_game_addons.sql \
	1615_areatrigger_graveyard.sql \
	1635_character.sql \
	1669_character_spell.sql \
	1676_game_graveyard.sql \
	1676_game_tele.sql \
	1687_loot_template.sql \
	1704_item_template.sql \
	1799_quest_template.sql \
	1825_game_corpse.sql \
	1856_command.sql \
	1865_command.sql \
	1880_command.sql \
	1883_quest_template.sql \
	1915_loot_template.sql \
	1935_command.sql \
	1949_corpse.sql \
	1953_playercreateinfo_skill.sql \
	1953_playercreateinfo_spell.sql \
	1956_command.sql \
	2017_quest_template.sql \
	2033_command.sql \
	2041_auctionhouse_bid.sql \
	2041_game_spell.sql \
	2041_game_talent.sql \
	2047_quest_template.sql \
	2054_command.sql \
	2058_command.sql \
	2066_creature_template.sql \
	2069_quest_template.sql \
	2079_command.sql \
	2099_npc_trainer.sql \
	2107_command.sql \
	2113_command.sql \
	2118_playercreateinfo_spell.sql \
	2119_command.sql \
	2130_quest_template.sql \
	2131_command.sql \
	2156_character.sql \
	2164_command.sql \
	2191_npc_trainer.sql \
	2191_playercreateinfo.sql \
	2220_command.sql \
	2297_character_stable.sql \
	2302_player_levelupgains.sql \
	2308_character_pet.sql \
	2330_realmlist.sql \
	2343_areatrigger_template.sql \
	2352_quest_template.sql \
	2357_playercreateinfo_action.sql \
	2359_command.sql \
	2360_creature_template.sql \
	2362_areatrigger_template.sql \
	2367_command.sql \
	2369_creature_template.sql \
	2370_character_queststatus.sql \
	2372_creature_template.sql \
	2382_mail_item.sql \
	2383_auctionhouse_item.sql \
	2418_quest_template.sql \
	2421_quest_template.sql \
	2424_gameobject_template.sql \
	2429_taxi.sql \
	2445_command.sql \
	2448_command.sql \
	2448_game_graveyard.sql \
	2454_command.sql \
	2467_quest_template.sql \
	2468_command.sql \
	2469_skinning_loot_template.sql \
	2479_loot_template.sql \
	2494_command.sql \
	2495_item_loot_template.sql \
	2500_command.sql \
	2513_guild_rank.sql \
	2516_auctionhouse.sql \
	2517_guild_charters.sql \
	2518_guild.sql \
	2530_loot_template.sql \
	2549_character.sql \
	2571_quest_template.sql \
	2572_creature_template.sql \
	2578_character.sql \
	2580_character.sql \
	2580_insatne.sql \
	2584_character.sql \
	2584_instance.sql \
	2597_playercreateinfo_action.sql \
	2597_playercreateinfo_item.sql \
	2597_playercreateinfo_reputation.sql \
	2597_playercreateinfo_skill.sql \
	2597_playercreateinfo_spell.sql \
	2598_playercreateinfo.sql \
	2605_realmd_account.sql \
	2610_character.sql \
	2617_character_spell_cooldown.sql \
	2622_character.sql \
	2622_gameobject.sql \
	2622_transports.sql \
	2630_command.sql \
	2633_character_spell_cooldown.sql \
	2637_auctionhouse.sql \
	2637_mail.sql \
	2641_command.sql \
	2642_loot_template.sql \
	2649_command.sql \
	2660_command.sql \
	2663_command.sql \
	2670_command.sql \
	2674_quest_template.sql \
	2674_scripts.sql \
	2680_game_addons.sql \
	2684_gameobject.sql \
	2684_quest_template.sql \
	2688_command.sql \
	2688_playercreateinfo.sql \
	2688_player_levelstats.sql \
	2689_player_levelstats.sql \
	2691_player_levelupgains.sql \
	2699_character_inventory.sql \
	2703_command.sql \
	2713_quest_template.sql \
	2746_command.sql \
	2746_creature.sql \
	2754_realmd.sql \
	2762_command.sql \
	2765_auctionHouse.sql \
	2765_mail.sql \
	2778_command.sql \
	2787_item_instance.sql \
	2798_command.sql \
	2803_command.sql \
	2808_command.sql \
	2812_character_pet.sql \
	2812_pet_name_generation.sql \
	2815_character_pet.sql \
	2821_raidgroups.sql \
	2828_character.sql \
	2838_corpse_grid.sql \
	2838_creature_grid.sql \
	2838_gameobject_grid.sql \
	2842_character_pet.sql \
	2843_character_pet.sql \
	2850_command.sql \
	2869_command.sql \
	2875_npc_trainer.sql \
	2875_spell_chain.sql \
	2881_spell_chain.sql \
	2885_character.sql \
	2912_areatrigger_template.sql \
	2916_character.sql \
	2938_spell_scripts.sql \
	2940_playercreateinfo_skill.sql \
	2958_command.sql \
	2958_scripts.sql \
	2958_spell_scripts.sql \
	2982_command.sql \
	2993_command.sql \
	3005.sql \
	3010_item_template.sql \
	3017_auctionhouse.sql \
	3020_command.sql \
	3032_creature.sql \
	3044_gameobject_template.sql \
	3054_command.sql \
	3059_pet_levelstats.sql \
	3068_command.sql \
	3075_creature.sql \
	3075_gameobject.sql \
	3090_command.sql \
	3090_creature_template.sql \
	3090_loot_template.sql \
	3091_spell_proc_event.sql \
	3092_quest_template.sql \
	3096_spell_proc_event.sql \
	3106_command.sql \
	3107_playercreateinfo_skill.sql \
	3108_quest_template.sql \
	3110_quest_template.sql \
	3115_quest_template.sql \
	3138_character_inventory.sql \
	3138_disenchaning_loot_template.sql \
	3138_item_template.sql \
	3141_spell_threat.sql \
	3144_command.sql \
	3150_command.sql \
	3162_character_queststatus.sql \
	3162_command.sql \
	3162_quest_template.sql \
	3174_command.sql \
	3179_quest_template.sql \
	3180_spell_proc_event.sql \
	3183_command.sql \
	3186_command.sql \
	3202_character_gifts.sql \
	3205_character_inventory.sql \
	3231_quest_template.sql \
	3245_item_text.sql \
	3245_mail.sql \
	3245_page_text.sql \
	3246_character_reputation.sql \
	3251_commands.sql \
	3252.sql \
	3296_commands.sql \
	3296_playercreateinfo_skill.sql \
	3296_spell_learn_skill.sql \
	3310_spell_learn_spell.sql \
	3316_playercreateinfo_reputation.sql \
	3323.sql \
	3344_playercreateinfo_spell.sql \
	3346_command.sql \
	3348_playercreateinfo_spell.sql \
	3350_command.sql \
	3351_character_pet.sql \
	3397_creature_template.sql \
	3400.sql \
	3402_creature_onkill_reputation.sql \
	3410_group.sql \
	3424_command.sql \
	3463_mangos.sql \
	3463_realm.sql \
	3474_creature_addon.sql \
	3501.sql \
	3503_creature_movement.sql \
	3512_character_spell_cooldown.sql \
	3514_mail.sql \
	3516_spell_learn_spell.sql \
	3533_command.sql \
	3538_guild_charter_sign.sql \
	3539_item_template.sql \
	3545_creature_movement.sql \
	3547_character_reputation.sql \
	3553_creature_onkill_reputation.sql \
	3562_player_levelstats.sql \
	3605_creature_addon.sql \
	3605_grid.sql \
	3611_spell_learn_skill.sql \
	3616_commands.sql \
	3627_quest_template.sql \
	3631_gameobject_template.sql \
	3636_character_spell.sql \
	3636_playercreateinfo_spell.sql \
	3646_spell_chain.sql \
	3648_command.sql \
	3649_spell_chain.sql \
	3653_spell.sql \
	3655_quest_template.sql \
	3657_command.sql \
	3660_character_kill.sql \
	3700_character.sql \
	3728_spell_proc_event.sql \
	3730_command.sql \
	3732_spell_affect.sql \
	3739_looking_for_group.sql \
	3746_spell_proc_event.sql \
	3747_command.sql \
	3748_command.sql \
	3753_battleground_template.sql \
	3763_spell_affect.sql \
	3766_spell_proc_event.sql \
	3771_creature_template.sql \
	3773.sql \
	3774_playercreateinfo_spell.sql \
	3782_command.sql \
	3784_command.sql \
	3787_spell_proc_event.sql \
	3801_banAccount.sql \
	3801_command.sql \
	3802_arena_teams.sql \
	3802_petitions.sql \
	3805_spell_proc_event.sql \
	3806_petitions.sql \
	3833_quest_template.sql \
	3845_account.sql \
	3845_command.sql \
	3859_spell_affect.sql \
	3860_creature_template.sql \
	3862_prospecting_loot_template.sql \
	3874_spell_scripts.sql \
	3875_item_template.sql \
	3876_character_ticket.sql \
	3884_quest_scripts.sql \
	3891_quest_scripts.sql \
	3906_areatrigger_template.sql \
	3929_spell_affect.sql \
	3932_item_enchantment_template.sql \
	3932_item_template.sql \
	3939_realmd_account.sql \
	3948_realmd_account.sql \
	3951_exploration_basexp.sql \
	3961_uptime.sql \
	3964_command.sql \
	4010_spell_proc_event.sql \
	4012_spell_proc_event.sql \
	4018_spell_proc_event.sql \
	4019_spell_chain.sql \
	4019_spell_proc_event.sql \
	4020_spell_chain.sql \
	4020_spell_proc_event.sql \
	4021_spell_chain.sql \
	4021_spell_proc_event.sql \
	4023_spell_proc_event.sql \
	4026_spell_proc_event.sql \
	4028_spell_chain.sql \
	4028_spell_proc_event.sql \
	4031_spell_chain.sql \
	4031_spell_proc_event.sql \
	4035_spell_proc_event.sql \
	4036_spell_proc_event.sql \
	4037_spell_proc_event.sql \
	4058.sql \
	4059_spell_learn_skill.sql \
	4059_spell_learn_spell.sql \
	4076_character_spell.sql \
	4076_playercreateinfo_spell.sql \
	4081_command.sql \
	4096_pet.sql \
	4116_creature_template.sql \
	4133_command.sql \
	4133_spell_chain.sql \
	4134_command.sql \
	4139_spell_proc_event.sql \
	4140_command.sql \
	4145_character_reputation.sql \
	4154_spell_proc_event.sql \
	4176_character.sql \
	4176_command.sql \
	4187_command.sql \
	4204_command.sql \
	4205_creature_template.sql \
	4224_character_aura.sql \
	4224_pet_aura.sql \
	4235_spell_proc_event.sql \
	4239_spell_chain.sql \
	4239_spell_proc_event.sql \
	4242_spell_proc_event.sql \
	4243_spell_affect.sql \
	4248_spell_chain.sql \
	4248_spell_proc_event.sql \
	4252_spell_threat.sql \
	4255_spell_chain.sql \
	4258_command.sql \
	4259_spell_chain.sql \
	4259_spell_proc_event.sql \
	4262_spell_proc_event.sql \
	4266_spell_proc_event.sql \
	4267_command.sql \
	4270_spell_proc_event.sql \
	4272_spell_proc_event.sql \
	4274_character_pet.sql \
	4275_game_event.sql \
	4288_spell_proc_event.sql \
	4294_spell_proc_event.sql \
	4296_spell_proc_event.sql \
	4317_spell_affect.sql \
	4320_spell_affect.sql \
	4331_spell_chain.sql \
	4331_spell_proc_event.sql \
	4341_game_event.sql \
	4356_command.sql \
	4369_battleground_template.sql \
	4376_battleground_template.sql \
	4392_battleground_template.sql \
	4395_spell_chain.sql \
	4397_command.sql \
	4401_spell_chain.sql \
	4403_reserved_name.sql \
	4407_character_kill.sql \
	4407_character.sql \
	4407_command.sql \
	4414_spell_chain.sql \
	4414_spell_proc_event.sql \
	4417_quest_template.sql \
	4420_spell_proc_event.sql \
	4422_command.sql \
	4425_character.sql \
	4425_command.sql \
	4426_creature_template.sql \
	4430_spell_proc_event.sql \
	4432_item_template.sql \
	4432_spell_chain.sql \
	4432_spell_proc_event.sql \
	4434_spell_proc_event.sql \
	4437_character_aura.sql \
	4437_pet_aura.sql \
	4439_spell_proc_event.sql \
	4446_creature_template.sql \
	4464_instance.sql \
	4464_instance_template.sql \
	4470_command.sql \
	4480_spell_affect.sql \
	4481_spell_affect.sql \
	4482_playercreateinfo.sql \
	4482_spell_proc_event.sql \
	4488_db_version.sql \
	4491_spell_affect.sql \
	4496_spell_script_target.sql \
	4498_spell_proc_event.sql \
	4499_spell_script_target.sql \
	4501.sql \
	4503_spell_chain.sql \
	4503_spell_proc_event.sql \
	4504_spell_affect.sql \
	4504_spell_proc_event.sql \
	4506_spell_learn_spell.sql \
	4507_quest_template.sql \
	4510_spell_proc_event.sql \
	4513_spell_proc_event.sql \
	4517_spell_affect.sql \
	4524_spell_proc_event.sql \
	4537_player_levelstats.sql \
	4540_battleground_template.sql \
	4544_creature_addon.sql \
	4544_creature_template_addon.sql \
	4547_spell_affect.sql \
	4547_spell_proc_event.sql \
	4551_item_template.sql \
	4556_realmlist.sql \
	4561_command.sql \
	4571_button_scripts.sql \
	4577_gameobject.sql \
	4579.sql \
	4582_spell_affect.sql \
	4584_character_inventory.sql \
	4585_item_instance.sql \
	4587_character_quest_daily.sql \
	4588_command.sql \
	4592_command.sql \
	4592_realmlist.sql \
	4594_item_template.sql \
	4595_command.sql \
	4595_spell_affect.sql \
	4597_realmlist.sql \
	4599_command.sql \
	4603_spell_affect.sql \
	4605_creature_addon.sql \
	4605_creature_template_addon.sql \
	4608_game_graveyard_zone.sql \
	4615_creature_template.sql \
	4627_game_event_model_equip.sql \
	4628.sql \
	4632_areatrigger_teleport.sql \
	4633_spell_teleport.sql \
	4640_command.sql \
	4656_game_event_creature_quest.sql \
	4657_quest_template.sql \
	4664.sql \
	4667_characters_character.sql \
	4674_mangos_skill_discovery_template.sql \
	4679_mangos_spell_proc_event.sql \
	4687_mangos_loot_template.sql \
	4695_mangos_loot_template.sql \
	4704_mangos_battlemaster_entry.sql \
	4714_mangos_spell_threat.sql \
	4718_mangos_uptime.sql \
	4737_mangos_command.sql \
	4764_characters_auctionhouse.sql \
	4772_mangos_item_template.sql \
	4781_mangos_gameobject_loot_template.sql \
	4788_mangos_gameobject_template.sql \
	4793_mangos_spell_affect.sql \
	4799_mangos_creature_addon.sql \
	4815_mangos_quest_template.sql \
	4829_mangos_command.sql \
	README

